--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "gatsby-starter-netlify-cms",
   "description": "Example Gatsby, and Netlify CMS project",
+  "homepage": "https://metaroot.github.io/the-sword",
   "version": "1.1.3",
   "author": "Austin Green",
   "dependencies": {
@@ -39,13 +40,16 @@
   "scripts": {
     "clean": "gatsby clean",
     "start": "npm run develop",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "build": "npm run clean && gatsby build",
     "develop": "npm run clean && gatsby develop",
     "serve": "gatsby serve",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"{gatsby-*.js,src/**/*.js}\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "prettier": "^2.0.5"
   },
   "engines": {
