--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   "scripts": {
     "clean": "gatsby clean",
     "start": "npm run develop",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "npm run clean && gatsby build",
     "develop": "npm run clean && gatsby develop",
     "serve": "gatsby serve",
