--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
   "scripts": {
     "clean": "gatsby clean",
     "start": "npm run develop",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "build": "npm run clean && gatsby build",
     "develop": "npm run clean && gatsby develop",
     "serve": "gatsby serve",
